--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^24.0.12",
     "typescript": "^5.8.3"
   }
