feat: add YouTube Music player integration
- Add MusicPlayer component for embedded music in posts
- Implement music field in post schema with multilingual description
- Create remark plugin for YouTube Music link processing
- Add player UI with light/dark theme support
- Enhance post layout with music section
- Add YouTube Music link processor utilities

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.3",
     "astro": "^5.12.8",
-    "marked": "^16.1.2"
+    "marked": "^16.1.2",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
